refactor: build actuator mappers in the service
The nine mappers are stateless and need at most the MaskingEngine.
Nobody overrode one, so their bean methods only added wiring; the
service is now the one override point for that pipeline.