@@ -5,51 +5,26 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.time.Instant;
-import java.time.ZoneId;
-import java.time.format.TextStyle;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.peekaboot.backend.actuator.InsightsSource;
 import org.peekaboot.backend.actuator.parsed.ActuatorResponseParser;
 import org.peekaboot.backend.domain.health.HealthStatus;
 import org.peekaboot.backend.domain.insights.ActuatorInsightsResponse;
 import org.peekaboot.backend.domain.loggers.LoggerGroup;
 import org.peekaboot.backend.lifecycle.DataSourceMetadata;
 import org.peekaboot.backend.lifecycle.DataSourceMetadataList;
-import org.peekaboot.backend.mapper.actuator.ApplicationMapper;
-import org.peekaboot.backend.mapper.actuator.ConfigMapper;
-import org.peekaboot.backend.mapper.actuator.DataSourceMapper;
-import org.peekaboot.backend.mapper.actuator.EnvironmentMapper;
-import org.peekaboot.backend.mapper.actuator.FlywayMapper;
-import org.peekaboot.backend.mapper.actuator.HealthMapper;
-import org.peekaboot.backend.mapper.actuator.LoggersMapper;
-import org.peekaboot.backend.mapper.actuator.RuntimeMapper;
-import org.peekaboot.backend.mapper.actuator.ScheduledTasksMapper;
 import org.peekaboot.backend.masking.MaskingEngine;
 import org.springframework.beans.factory.ObjectProvider;
 
 class ActuatorInsightsServiceTest {
 
-    private PeekabootActuatorService actuatorService;
-    private ActuatorInsightsService insightsService;
-
-    @BeforeEach
-    @SuppressWarnings("unchecked")
-    void setUp() {
-        actuatorService = mock(PeekabootActuatorService.class);
-        ObjectProvider<DataSourceMetadataList> dataSourceProvider = mock(ObjectProvider.class);
-        when(dataSourceProvider.getIfAvailable(any())).thenReturn(DataSourceMetadataList.EMPTY);
-
-        insightsService = newInsightsService(dataSourceProvider);
-    }
-
     @Test
     void getInsights_shouldMapAllSections() {
-        when(actuatorService.getInsightsData())
-                .thenReturn(Map.of(
+        ActuatorInsightsService service = service(
+                Map.of(
                         "health", Map.of("status", "UP", "components", Map.of()),
                         "info",
                                 Map.of(
@@ -89,9 +64,10 @@ class ActuatorInsightsServiceTest {
                                                                         "prefix",
                                                                         "my.config",
                                                                         "properties",
-                                                                        Map.of("enabled", true))))))));
+                                                                        Map.of("enabled", true))))))),
+                DataSourceMetadataList.EMPTY);
 
-        ActuatorInsightsResponse response = insightsService.getInsights(Locale.ENGLISH, false);
+        ActuatorInsightsResponse response = service.getInsights(Locale.ENGLISH, false);
 
         assertThat(response.health().status()).isEqualTo(HealthStatus.UP);
         assertThat(response.application().springBootVersion()).isEqualTo("4.0.1");
@@ -109,19 +85,13 @@ class ActuatorInsightsServiceTest {
     }
 
     @Test
-    @SuppressWarnings("unchecked")
     void getInsights_shouldMapDataSourcesFromInjectedMetadata() {
         DataSourceMetadata metadata = mock(DataSourceMetadata.class);
         when(metadata.getDataSourceName()).thenReturn("primaryDS");
         when(metadata.getHosts()).thenReturn(List.of());
+        ActuatorInsightsService service = service(Map.of(), new DataSourceMetadataList(List.of(metadata)));
 
-        ObjectProvider<DataSourceMetadataList> dataSourceProvider = mock(ObjectProvider.class);
-        when(dataSourceProvider.getIfAvailable(any())).thenReturn(new DataSourceMetadataList(List.of(metadata)));
-
-        ActuatorInsightsService serviceWithDataSource = newInsightsService(dataSourceProvider);
-        when(actuatorService.getInsightsData()).thenReturn(Map.of());
-
-        ActuatorInsightsResponse response = serviceWithDataSource.getInsights(Locale.ENGLISH, false);
+        ActuatorInsightsResponse response = service.getInsights(Locale.ENGLISH, false);
 
         assertThat(response.dataSources()).hasSize(1);
         assertThat(response.dataSources().get(0).name()).isEqualTo("primaryDS");
@@ -129,66 +99,73 @@ class ActuatorInsightsServiceTest {
 
     @Test
     void getInsights_shouldHandleMissingData() {
-        when(actuatorService.getInsightsData()).thenReturn(Map.of());
+        ActuatorInsightsService service = service(Map.of(), DataSourceMetadataList.EMPTY);
 
-        ActuatorInsightsResponse response = insightsService.getInsights(Locale.ENGLISH, false);
+        ActuatorInsightsResponse response = service.getInsights(Locale.ENGLISH, false);
 
         assertThat(response.health().status()).isEqualTo(HealthStatus.UNKNOWN);
         assertThat(response.dataSources()).isEmpty();
+        assertThat(response.server()).isNotNull();
+    }
+
+    /** The mappers are built inside the service, so the engine it is handed is the one that masks. */
+    @Test
+    void getInsights_shouldMaskThroughTheEngineItWasGiven() {
+        ActuatorInsightsService service = service(
+                Map.of(
+                        "env",
+                        Map.of(
+                                "propertySources",
+                                List.of(Map.of(
+                                        "name",
+                                        "application.yml",
+                                        "properties",
+                                        Map.of("db.password", Map.of("value", "hunter2")))))),
+                DataSourceMetadataList.EMPTY);
+
+        ActuatorInsightsResponse response = service.getInsights(Locale.ENGLISH, false);
+
+        assertThat(response.environment()
+                        .propertySources()
+                        .getFirst()
+                        .properties()
+                        .getFirst()
+                        .value())
+                .isEqualTo("******");
     }
 
     @Test
-    void getInsights_shouldIncludeServerInfo() {
-        when(actuatorService.getInsightsData()).thenReturn(Map.of());
-
-        ActuatorInsightsResponse response = insightsService.getInsights(Locale.ENGLISH, false);
-
-        ZoneId zone = ZoneId.systemDefault();
-        assertThat(response.server().timezone()).isEqualTo(zone.getId());
-        assertThat(response.server().timezoneOffset())
-                .isEqualTo(zone.getRules().getOffset(Instant.now()).toString());
-        assertThat(response.server().timezoneDisplay()).isEqualTo(zone.getDisplayName(TextStyle.FULL, Locale.ENGLISH));
-        assertThat(response.server().availableProcessors())
-                .isEqualTo(Runtime.getRuntime().availableProcessors());
-    }
-
-    @Test
-    void getInsights_shouldPassLocaleToScheduledTasksMapper() {
-        when(actuatorService.getInsightsData())
-                .thenReturn(Map.of(
+    void getInsights_shouldDescribeSchedulesInTheRequestLocale() {
+        ActuatorInsightsService service = service(
+                Map.of(
                         "scheduledtasks",
                         Map.of(
                                 "cron",
-                                        List.of(Map.of(
-                                                "expression",
-                                                "0 0 * * * *",
-                                                "runnable",
-                                                Map.of("target", "com.example.Task.run"))),
-                                "fixedDelay", List.of(),
-                                "fixedRate", List.of())));
+                                List.of(Map.of(
+                                        "expression",
+                                        "0 0 * * * *",
+                                        "runnable",
+                                        Map.of("target", "com.example.Task.run"))))),
+                DataSourceMetadataList.EMPTY);
 
-        ActuatorInsightsResponse response = insightsService.getInsights(Locale.ENGLISH, false);
+        ActuatorInsightsResponse response = service.getInsights(Locale.GERMAN, false);
 
-        assertThat(response.scheduledTasks()).isNotNull();
-        assertThat(response.scheduledTasks().tasks()).hasSize(1);
-        assertThat(response.scheduledTasks().tasks().get(0).scheduleDescription())
-                .isNotNull();
+        assertThat(response.scheduledTasks().tasks().getFirst().scheduleDescription())
+                .containsIgnoringCase("Stunde");
     }
 
-    private ActuatorInsightsService newInsightsService(ObjectProvider<DataSourceMetadataList> dataSourceProvider) {
-        MaskingEngine maskingEngine = new MaskingEngine();
+    /** The real actuator service over inline sources, one per section the test supplies. */
+    @SuppressWarnings("unchecked")
+    private static ActuatorInsightsService service(Map<String, Object> sections, DataSourceMetadataList dataSources) {
+        List<InsightsSource> sources = sections.entrySet().stream()
+                .map(section -> new InsightsSource(section.getKey(), section::getValue))
+                .toList();
+        ObjectProvider<DataSourceMetadataList> dataSourceProvider = mock(ObjectProvider.class);
+        when(dataSourceProvider.getIfAvailable(any())).thenReturn(dataSources);
         return new ActuatorInsightsService(
-                actuatorService,
+                new PeekabootActuatorService(sources),
                 new ActuatorResponseParser(),
-                new HealthMapper(maskingEngine),
-                new RuntimeMapper(),
-                new DataSourceMapper(maskingEngine),
-                new ApplicationMapper(maskingEngine),
-                new EnvironmentMapper(maskingEngine),
-                new LoggersMapper(),
-                new FlywayMapper(),
-                new ConfigMapper(maskingEngine),
-                new ScheduledTasksMapper(maskingEngine),
+                new MaskingEngine(),
                 dataSourceProvider);
     }
 }
